k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLables:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec: 
      containers:
        - name: frontend
          image: rima603/frontbankingdevops:latest
          ports:
            - containerPort: 80
