k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec: 
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
